<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ChulosPizza</string>
    <string name="title_activity_principal">Principal</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="quieropizza">¡Quiero Una Pizza!</string>
    <string name="title_activity_pedir_pizzas">ChulosPizza</string>
    <string name="numpizzastring">Pizza</string>
    <string name="maspizzastring">></string>
    <string name="menospizzastring">&lt;</string>
    <string name="pedidostring">Pedido:</string>
    <string name="totalstring">Total:</string>
    <string name="pagarstring">PAGAR</string>
    <string name="title_activity_pagar">Pagar</string>
    <string name="title_activity_final">Final</string>
    <string name="vaencamino">¡Va en camino!</string>
    <string name="pormientras">Por mientras...</string>
    <string name="like">Puedes darnos like</string>
    <string name="jugar">O Jugar FlappyMeni</string>

</resources>
