<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#cc0000"
    tools:context="com.nthings.chulospizza.PedirPizzas" >

<LinearLayout 
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#cc0000"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
	
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="#cc0000" >

        <Button
            android:id="@+id/maspizzas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="#FFFF00"
            android:text="@string/maspizzastring" />

        <Button
            android:id="@+id/menospizzas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="#FFFF00"
            android:text="@string/menospizzastring" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:layout_toLeftOf="@+id/maspizzas"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/numpizzastring"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFF00" />

        <TextView
            android:id="@+id/numeropizzas"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignBaseline="@+id/textView1"
            android:layout_alignBottom="@+id/textView1"
            android:layout_toLeftOf="@+id/textView1"
            android:layout_toRightOf="@+id/menospizzas"
            android:gravity="center_vertical|center_horizontal"
            android:text="1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFF00" />

    </RelativeLayout>

    <ListView
        android:id="@+id/pizzas"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_weight="1" >

    </ListView>

    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#cc0000"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pedidostring"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFF00" />

        <ListView
            android:id="@+id/pedido"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:clickable="false" >

        </ListView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout02"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:background="#cc0000"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/totalstring"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFF00" />

        <TextView
            android:id="@+id/signopesos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="$"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFF00" />
        <TextView
            android:id="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="--------"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFF00" />

    </LinearLayout>

    <Button
        android:id="@+id/pagar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2.54"
        android:background="#FFFF00"
        android:text="@string/pagarstring" />

</LinearLayout>
</ScrollView>
